# serializer version: 1
# name: test_websocket_commands[consumptions_day]
  list([
    list([
      1672531200000.0,
      5.0,
    ]),
    list([
      1672617600000.0,
      6.0,
    ]),
  ])
# ---
# name: test_websocket_commands[consumptions_hour]
  list([
    list([
      1672596000000.0,
      1.85,
    ]),
    list([
      1672599600000.0,
      1.95,
    ]),
    list([
      1672603200000.0,
      2.05,
    ]),
    list([
      1672606800000.0,
      2.15,
    ]),
    list([
      1672610400000.0,
      2.25,
    ]),
    list([
      1672614000000.0,
      2.35,
    ]),
    list([
      1672617600000.0,
      0.05,
    ]),
    list([
      1672621200000.0,
      0.15,
    ]),
    list([
      1672624800000.0,
      0.25,
    ]),
    list([
      1672628400000.0,
      0.35,
    ]),
    list([
      1672632000000.0,
      0.45,
    ]),
    list([
      1672635600000.0,
      0.55,
    ]),
    list([
      1672639200000.0,
      0.65,
    ]),
    list([
      1672642800000.0,
      0.75,
    ]),
    list([
      1672646400000.0,
      0.85,
    ]),
    list([
      1672650000000.0,
      0.95,
    ]),
    list([
      1672653600000.0,
      1.05,
    ]),
    list([
      1672657200000.0,
      1.15,
    ]),
    list([
      1672660800000.0,
      1.25,
    ]),
    list([
      1672664400000.0,
      1.35,
    ]),
    list([
      1672668000000.0,
      1.45,
    ]),
    list([
      1672671600000.0,
      1.55,
    ]),
    list([
      1672675200000.0,
      1.65,
    ]),
    list([
      1672678800000.0,
      1.75,
    ]),
    list([
      1672682400000.0,
      1.85,
    ]),
    list([
      1672686000000.0,
      1.95,
    ]),
    list([
      1672689600000.0,
      2.05,
    ]),
    list([
      1672693200000.0,
      2.15,
    ]),
    list([
      1672696800000.0,
      2.25,
    ]),
    list([
      1672700400000.0,
      2.35,
    ]),
  ])
# ---
# name: test_websocket_commands[costs]
  list([
    list([
      1672531200000.0,
      50.0,
    ]),
  ])
# ---
# name: test_websocket_commands[maximeter]
  list([
    list([
      1672531200000.0,
      3.0,
    ]),
  ])
# ---
# name: test_websocket_commands[summary]
  dict({
    'contract_p1_kw': 4.4,
    'contract_p2_kw': 4.4,
    'cups': 'ES0021000000000000AA0A',
    'last_datetime': '2023-01-02T23:00:00',
    'max_power_datetime': None,
    'max_power_kw': None,
    'max_power_mean_kw': None,
    'supply_address': 'FAKE STREET 1',
    'supply_point_type': 5,
  })
# ---
# name: test_websocket_commands[surplus_month]
  list([
    list([
      1672531200000.0,
      5.0,
    ]),
  ])
# ---
